nova (2013.2.1-3) unstable; urgency=medium

  * Add myself in Uploaders
  * nova-compute-kvm directly depends on qemu-kvm since kvm package doesn't
    exist anymore. We keep an alternative dependency on kvm to simplify
    backports.

 -- Gonéri Le Bouder <goneri@debian.org>  Thu, 16 Jan 2014 10:21:08 +0100

nova (2013.2.1-2) unstable; urgency=medium

  * Killed the DEFAULTS_FILE feature in init scripts and template.
  * Updated debconf template translation, with thanks to:
    - Swedish: Martin Bagge (Closes: #734621).
    - German: Chris Leick (Closes: #735335).

 -- Thomas Goirand <zigo@debian.org>  Wed, 15 Jan 2014 10:46:02 +0800

nova (2013.2.1-1) unstable; urgency=high

  * New upstream release (Closes: #732022). This fixes: CVE-2013-7048: Nova
    live snapshots use an insecure local directory and CVE-2013-6419:
    Metadata queries from Neutron to Nova are not restricted by tenant.
  * Added | cut -d" " -f1 when searching for the default gateway interface,
    in the nova-common.config script that tries to guess the "my_ip" address,
    just in case there's more than one interface in use (in which case it may
    fail in non-interactive mode).
  * Updates the French debconf translation which was broken, thanks to our
    cheesemaster for the update (Closes: #732267).
  * Updates the Spanish debconf translation, thanks to jathan
    <jathanblackred@gmail.com> for this update (Closes: #732206).
  * Fixes requirement.txt patch (upstream now includes the python-six fix).
  * Removes patch applied upstream:
    CVE-2013-4463_CVE-2013-4469_ensure_we_dont_boot_oversized_image.patch
  * Fix typoe in libvirt_vif_driver (had Hybird instead of Hybrid).
  * Updates (build-)depends version of python-six (>= 1.4.1) and
    python-iso8601 (>= 0.1.8).
  * Removed python-argparse from python-nova depends.

 -- Thomas Goirand <zigo@debian.org>  Mon, 16 Dec 2013 16:33:25 +0800

nova (2013.2-3) unstable; urgency=high
